db and user rankings

--- a/MazeGame/Web.config
+++ b/MazeGame/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -9,8 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="UsersInfoContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=UsersInfoContext-20170615170950; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|UsersInfoContext-20170615170950.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="UsersInfoContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=UsersInfoContext-20170615170950; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|UsersInfoContext-20170615170950.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
