--- a/MazeGame/MazeGame.csproj
+++ b/MazeGame/MazeGame.csproj
@@ -68,7 +68,7 @@
     </Reference>
     <Reference Include="SearchAlgorithmsLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\AdvProg2\MazeObjectAdapterLib\bin\Debug\SearchAlgorithmsLib.dll</HintPath>
+      <HintPath>..\..\..\..\Desktop\שנה ב\סמסטר ב\תכנות 2\תרגילים\תרגיל 2\להגשה\exe\Server\SearchAlgorithmsLib.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -102,9 +102,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="index.html" />
+    <Content Include="Scripts\app.js" />
     <Content Include="Scripts\JQuery.changeSizes.js" />
+    <Content Include="Scripts\knockout-3.4.2.debug.js" />
+    <Content Include="Scripts\knockout-3.4.2.js" />
+    <Content Include="Scripts\rankTable.js" />
     <Content Include="Scripts\solveMaze.js" />
     <Content Include="Scripts\startSingleGame.js" />
+    <Content Include="Scripts\userRankings.css" />
     <Content Include="Views\HtmlPage1.html" />
     <Content Include="Views\Images\Exit.png" />
     <Content Include="Views\Images\minion.gif" />
@@ -128,6 +133,8 @@
     <Content Include="Scripts\navbar.css" />
     <Content Include="Scripts\navbar.js" />
     <Content Include="Views\SinglePlayerPage.html" />
+    <Content Include="Views\UserRankings.html" />
+    <Content Include="Views\usersExample.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
