--- a/MazeGame/MazeGame.csproj
+++ b/MazeGame/MazeGame.csproj
@@ -133,6 +133,7 @@
     <Content Include="Scripts\jquery.signalR-2.2.2.min.js" />
     <Content Include="Scripts\knockout-3.4.2.debug.js" />
     <Content Include="Scripts\knockout-3.4.2.js" />
+    <Content Include="Scripts\listGames.js" />
     <Content Include="Scripts\MultiplayerGame.js" />
     <Content Include="Scripts\rankTable.js" />
     <Content Include="Scripts\solveMaze.js" />
