--- a/MazeGame/MazeGame.csproj
+++ b/MazeGame/MazeGame.csproj
@@ -123,7 +123,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="index.html" />
-    <Content Include="Scripts\app.js" />
+    <Content Include="Scripts\settings.js" />
+    <Content Include="Scripts\userLog.js" />
     <Content Include="Scripts\homePage.js" />
     <None Include="Scripts\jquery-1.6.4-vsdoc.js" />
     <Content Include="Scripts\jquery-1.6.4.js" />
@@ -133,7 +134,6 @@
     <Content Include="Scripts\jquery.signalR-2.2.2.min.js" />
     <Content Include="Scripts\knockout-3.4.2.debug.js" />
     <Content Include="Scripts\knockout-3.4.2.js" />
-    <Content Include="Scripts\listGames.js" />
     <Content Include="Scripts\MultiplayerGame.js" />
     <Content Include="Scripts\rankTable.js" />
     <Content Include="Scripts\solveMaze.js" />
