--- a/MazeGame/MazeGame.csproj
+++ b/MazeGame/MazeGame.csproj
@@ -131,7 +131,6 @@
     <None Include="Scripts\jquery-1.6.4-vsdoc.js" />
     <Content Include="Scripts\jquery-1.6.4.js" />
     <Content Include="Scripts\jquery-1.6.4.min.js" />
-    <Content Include="Scripts\JQuery.changeSizes.js" />
     <Content Include="Scripts\jquery.signalR-2.2.2.js" />
     <Content Include="Scripts\jquery.signalR-2.2.2.min.js" />
     <Content Include="Scripts\knockout-3.4.2.debug.js" />
@@ -140,7 +139,6 @@
     <Content Include="Scripts\rankTable.js" />
     <Content Include="Scripts\solveMaze.js" />
     <Content Include="Scripts\startSingleGame.js" />
-    <Content Include="Views\HtmlPage1.html" />
     <Content Include="Views\Images\Exit.png" />
     <Content Include="Views\Images\minion.gif" />
     <Content Include="Views\Images\pokemon.gif" />
@@ -162,11 +160,10 @@
     <Content Include="Views\Register.html" />
     <Content Include="Scripts\jquery-3.2.1.js" />
     <Content Include="Scripts\JQuery.mazeBoard.js" />
-    <Content Include="Scripts\navbar.css" />
+    <Content Include="Scripts\css\navbar.css" />
     <Content Include="Scripts\navbar.js" />
     <Content Include="Views\SinglePlayerPage.html" />
     <Content Include="Views\UserRankings.html" />
-    <Content Include="Views\usersExample.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
